--- a/AfflictionComponent.csproj
+++ b/AfflictionComponent.csproj
@@ -70,6 +70,8 @@
 	  <EmbeddedResource Include="Resources\Localization.json" />
 	  <None Remove="Resources\Lambda.png" />
 	  <EmbeddedResource Include="Resources\Lambda.png" />
+	  <None Remove="Resources\Aperture.png" />
+	  <EmbeddedResource Include="Resources\Aperture.png" />
 	</ItemGroup>
 
 	<!-- This is a build event. It will copy your dll to the currently defined TheLongDarkPath's Mods folder -->
